Fix issue, hopefully, where scores tips is collapsed in build.

--- a/app/components/Main/LeftShelf/style.scss
+++ b/app/components/Main/LeftShelf/style.scss
@@ -30,7 +30,6 @@ $height___overviewToggle__phone:
     * $overviewToggleRatio;
 
 .LeftShelf {
-    height: 0;
 
     transition:
         opacity $animationDuration__default,
